Add background layers to index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 
-    <div id="background-layer"></div>
+    <div id="bg-back" class="bg-layer"></div>
+    <div id="bg-front" class="bg-layer"></div>
 
     <div id="start-screen">
         <h1>My Adventure</h1>
@@ -29,4 +30,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
